--- a/style.css
+++ b/style.css
@@ -2,3 +2,17 @@ body {
     background-color: rgb(177, 187, 195);
     color: grayboro;
 }
+
+td,
+th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
