learn: PHP integers

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(177, 187, 195);
-    color: grayboro;
+    background-color: gray;
+    color: rgb(234, 241, 248);
 }
 
 td,
